styles/colors.css
:root {
  --mdc-theme-primary: #003f87;
  --mdc-theme-primary-lighter: #134885;
  --mdc-theme-primary-light: #4969b7;
  --mdc-theme-primary-lightest: #8096cd;
  --mdc-theme-primary-lightest-most: #aac0eb;
  --mdc-theme-primary-darker: #0f3663;
  --mdc-theme-primary-dark: #001a59;
  --mdc-theme-secondary: #bc1b2d;
  --mdc-theme-secondary-light: #f55656;
  --mdc-theme-secondary-darker: #911321;
  --mdc-theme-secondary-dark: #840005;
  --mdc-theme-background: #ffffff;
  --mdc-theme-text-on-background: #1f1f1f;
  --mdc-theme-disabled-text-on-background: #0000008a;
  --mdc-theme-primary_accent_text-on-background: var(--mdc-theme-primary-lighter);
  --mdc-theme-text-on-primary: #e0e0e0;
  --mdc-theme-text-on-secondary: #e0e0e0;
  --mdc-theme-error: #b00020;
  --banner-primary: var(--mdc-theme-primary-lighter);
  --banner-secondary: var(--mdc-theme-secondary);
  --button-text-on-background: var(--mdc-theme-primary);
  --button-ripple-color-on-background: #000000;
  --button-ripple-color-hover-opacity-on-background: 0.08;
  --button-ripple-color-focus-opacity-on-background: 0.12;
  --button-ripple-color-active-opacity-on-background: 0.2;
  --button--raised-fill-color: var(--mdc-theme-primary);
  --button--raised-text-color: var(--mdc-theme-text-on-primary);
  --button--raised-ripple-color: #ffffff;
  --button--raised-ripple-color-hover-opacity: 0.06;
  --button--raised-ripple-color-focus-opacity: 0.08;
  --button--raised-ripple-color-active-opacity: 0.16;
  --snackbar-background: #222222;
  --field-text-color-on-background: var(--mdc-theme-text-on-background);
  --field-unfocused-text-color-on-background: rgba(0,0,0,0.65);
  --field-outline-color-on-background: rgba(0,0,0,0.24);
  --field-outline-color-hover-on-background: rgba(0,0,0,0.87);
  --field-outline-color-focus-on-background: var(--mdc-theme-primary);
  --index-welcome-background-image: url("../src/index/370-mountains-light.jpg");
  --index-main-carousel-gradient: linear-gradient(180deg, #c6c6c6 0%, #dedede 51%, white 82%);
  --index-img-carousel-brightness: none;
  --side-nav-drawer-background: var(--mdc-theme-background);
  --side-nav-drawer-text-on-background: var(--mdc-theme-text-on-background);
  --side-nav-drawer-inactive-text-on-background: var(--mdc-theme-disabled-text-on-background);
  --side-nav-drawer-item-ripple-color: var(--side-nav-header-text-color);
  --side-nav-drawer-item-active-dropdown-bg: #003f870c;
  --side-nav-header-bg-color: var(--side-nav-background);
  --side-nav-header-text-color: var(--mdc-theme-primary);
  --side-nav-header-bugler-color: var(--side-nav-header-text-color);
  --side-nav-header-social-icons-color: var(--side-nav-header-text-color);
  --side-nav-header-social-icons-ripple-color: var(--side-nav-header-text-color);
  --side-nav-header-border-bottom-color: #e0e0e0;
  --signin-accent-color: var(--mdc-theme-primary);
  --signin-background: #eeeeee;
  --signin-text-color: var(--mdc-theme-text-on-background);
  --signin-light-text-color: #333333;
}
.top {
  --top-height: 60px;
  --titlebar-heading-width: 286px;
  --titlebar-heading-font-size: 24px;
  --titlebar-heading-padding-x: 16px;
  --titlebar-heading-padding-y: 18px;
  --titlebar-margin-left: 0;
  --titlebar-site-margin-top: 0;
  --menu-icon-display: none;
  --main-nav-height: 60px;
  --main-nav-display: inline-flex;
  --topnav-a-padding-x: 15.3px;
  --topnav-a-padding-y: 19px;
  --topnav-dropdown-arrow-padding-y: 14px;
  --topnav-dropdown-arrow-svg-margin-top: 4px;
  --topnav-dropdown-a-padding-x: 16px;
  --topnav-dropdown-a-padding-y: 12px;
}
.top.colorful, .top.dark {
  --titlebar-heading-color: #e0e0e0;
  --menu-icon-fill: #e0e0e0;
  --topnav-text-color: #e0e0e0;
  --topnav-dropdown-text-color: #222222;
  --topnav-currentpage-color: #e0e0e0;
  --topnav-dropdown-bg-color: #f7f7f7;
  --topnav-ripple-color: #ffffff;
  --topnav-dropdown-ripple-color: #003f87;
}
.top.colorful {
  --topnav-bg-color: var(--banner-primary);
}
.top.dark {
  --topnav-bg-color: #242424;
}
.top.light {
  --titlebar-heading-color: var(--mdc-theme-primary);
  --menu-icon-fill: var(--mdc-theme-primary);
  --topnav-bg-color: var(--mdc-theme-background);
  --topnav-text-color: var(--mdc-theme-text-on-background);
  --topnav-dropdown-text-color: var(--mdc-theme-text-on-background);
  --topnav-currentpage-color: var(--mdc-theme-primary);
  --topnav-dropdown-bg-color: var(--snackbar-background);
  --topnav-ripple-color: #ffffff;
  --topnav-dropdown-ripple-color: #ffffff;
}
@media (max-width: 600px) { /*duplicated from above*/
  .top.mobile-colorful, .top.mobile-dark {
    --titlebar-heading-color: #e0e0e0;
    --menu-icon-fill: #e0e0e0;
    --topnav-text-color: #e0e0e0;
    --topnav-dropdown-text-color: #222222;
    --topnav-currentpage-color: #e0e0e0;
    --topnav-dropdown-bg-color: #f7f7f7;
    --topnav-ripple-color: #ffffff;
    --topnav-dropdown-ripple-color: #003f87;
  }
  .top.mobile-colorful {
    --topnav-bg-color: var(--banner-primary);
  }
  .top.mobile-dark {
    --topnav-bg-color: #212121;
  }
  .top.mobile-light {
    --titlebar-heading-color: var(--mdc-theme-primary);
    --menu-icon-fill: var(--mdc-theme-primary);
    --topnav-bg-color: var(--mdc-theme-background);
    --topnav-text-color: var(--mdc-theme-text-on-background);
    --topnav-dropdown-text-color: var(--mdc-theme-text-on-background);
    --topnav-currentpage-color: var(--mdc-theme-primary);
    --topnav-dropdown-bg-color: var(--snackbar-background);
    --topnav-ripple-color: #ffffff;
    --topnav-dropdown-ripple-color: #ffffff;
  }
}
/*@media (prefers-color-scheme: dark) {*/
  html.dark {
    --mdc-theme-background: #242424;
    --mdc-theme-text-on-background: #e0e0e0;
    --mdc-theme-disabled-text-on-background: #e0e0e08a;
    --mdc-theme-primary_accent_text-on-background: var(--mdc-theme-primary-lightest-most);
    --mdc-theme-error: #e94948;
    --banner-primary: var(--mdc-theme-primary-darker);
    --banner-secondary: var(--mdc-theme-secondary-darker);
    --button-text-on-background: var(--mdc-theme-primary-lightest-most);
    --button-ripple-color-on-background: #8096cd;
    --button-ripple-color-hover-opacity-on-background: 0.06;
    --button-ripple-color-focus-opacity-on-background: 0.08;
    --button-ripple-color-active-opacity-on-background: 0.16;
    --button--raised-fill-color: var(--mdc-theme-primary-lightest);
    --button--raised-text-color: #000000;
    --button--raised-ripple-color: #000000;
    --snackbar-background: #303030;
    --field-unfocused-text-color-on-background: rgba(255,255,255,0.45);
    --field-outline-color-on-background: rgba(255,255,255,0.44);
    --field-outline-color-hover-on-background: rgba(255,255,255,0.67);
    --field-outline-color-focus-on-background: var(--mdc-theme-primary-lightest);
    --index-welcome-background-image: url("../src/index/370-mountains-dark.jpg");
    --index-main-carousel-gradient: linear-gradient(180deg, #373737 0%, #292929 51%, #242424 82%);
    --index-img-carousel-brightness: brightness(80%);
    --side-nav-drawer-item-active-dropdown-bg: #aac0eb0c;
    --side-nav-header-text-color: var(--mdc-theme-primary-lightest-most);
    --side-nav-header-border-bottom-color: #333333;
    --signin-accent-color: var(--mdc-theme-primary-lightest);
    --signin-background: #202020;
    --signin-light-text-color: #e0e0e08a;
  }
  html.dark .top.light {
    --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
    --menu-icon-fill: var(--mdc-theme-primary-lightest-most);
    --topnav-currentpage-color: var(--mdc-theme-primary-lightest-most);
  }
  @media (max-width: 600px) {
    html.dark .top.mobile-light {
      --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
      --menu-icon-fill: var(--mdc-theme-primary-lightest-most);
      --topnav-currentpage-color: var(--mdc-theme-primary-lightest-most);
    }
  }
/*}*/

